partner login validation update

--- a/src/app/offline-booking/sr-creation/sr-creation.component.html
+++ b/src/app/offline-booking/sr-creation/sr-creation.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="main_card_form ">
             <div class="main_header">
-                <div class="header_title">Offline SR Login</div>
+                <div class="header_title">Offline SR-Login</div>
             </div>
 
             <div class="main_body main_card_height_scroll_withoutfooter">
