--- a/src/app/pos-management/view-posp/view-posp.component.html
+++ b/src/app/pos-management/view-posp/view-posp.component.html
@@ -4,7 +4,7 @@
         <div class="col-md-12">
           <div class="main_card_form">
             <div class="main_header">
-              <div class="header_title" *ngIf="urlSegmentSub == 'Posp-leads'">POSP Leads</div>
+              <div class="header_title" *ngIf="urlSegmentSub == 'Posp-leads'">POSP Leads New</div>
               <div class="header_title" *ngIf="urlSegmentSub == 'Under-Training-Posp'">Under Training Leads</div>
               <div class="header_title" *ngIf="urlSegmentSub == 'New-Posp'">New POSP Leads</div>
               <div class="header_title" *ngIf="urlSegmentSub == 'Verified-Docs'">Verified Docs</div>
