New option add as training

--- a/src/app/pos-management/view-posp/view-posp.component.html
+++ b/src/app/pos-management/view-posp/view-posp.component.html
@@ -13,6 +13,7 @@
               <div class="header_title" *ngIf="urlSegmentSub == 'Rejected-Posp'">Rejected POSP</div>
               <div class="header_title" *ngIf="urlSegmentSub == 'Noc-Released'">NOC Released POSP</div>
               <div class="header_title" *ngIf="urlSegmentSub == 'life-Training-Posp'">life Training Posp</div>
+              <div class="header_title" *ngIf="urlSegmentSub == 'life-Training-Posp'">Training</div>
             </div>
             <div *ngIf="!hasAccess" class="error-message">
                 <div class="container" style="text-align: center;">
