--- a/src/app/docs-wallet/add-docs-wallet/add-docs-wallet.component.html
+++ b/src/app/docs-wallet/add-docs-wallet/add-docs-wallet.component.html
@@ -1,7 +1,7 @@
 <div class="row">
 
   <div class="modal-header" style="text-align: center;">
-    <h4 class="modal-title" *ngIf="this.type=='Add'">Add Doc's</h4>
+    <h4 class="modal-title" *ngIf="this.type=='Add'">Add Documents</h4>
     <h4 class="modal-title" *ngIf="this.type=='Edit'">Edit Doc's</h4>
   </div>
 </div>
