add document label-update

--- a/src/app/docs-wallet/add-docs-wallet/add-docs-wallet.component.html
+++ b/src/app/docs-wallet/add-docs-wallet/add-docs-wallet.component.html
@@ -2,7 +2,7 @@
 
   <div class="modal-header" style="text-align: center;">
     <h4 class="modal-title" *ngIf="this.type=='Add'">Add Doc's</h4>
-    <h4 class="modal-title" *ngIf="this.type=='Edit'">Edit Doc's</h4>
+    <h4 class="modal-title" *ngIf="this.type=='Edit'">Edit-Doc's</h4>
   </div>
 </div>
 
