--- a/src/app/AssetsManagement/inventory/inventory.component.html
+++ b/src/app/AssetsManagement/inventory/inventory.component.html
@@ -9,7 +9,7 @@
                     <div class="box-header">
                         <div class="row">
                             <div class="col-md-4">
-                                <h3 class="box-title">Inventory </h3>
+                                <h3 class="box-title">Inventory data </h3>
                             </div>
                             <div class="col-md-5">&nbsp;</div>
 
